--- a/api/package.json
+++ b/api/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.12",
     "mongoose-autopopulate": "^0.12.3",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
