--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
