User: code, auto-incremental, rutas modificadas para buscar por code y no dni/email

--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.12",
+    "mongoose-auto-increment": "^5.0.1",
     "mongoose-autopopulate": "^0.12.3",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
