Se envia el mail

--- a/api/.env
+++ b/api/.env
@@ -6,3 +6,8 @@ googleClientID=618507479461-1dib71t2a0fcn45qnhq35v74ilsvff28.apps.googleusercont
 -------------Github-----------
 githubClientID=bdedcb19220f83d99c11
 githubClientSecret=c2ef7c83c799fe1dd032a1c0281915f0380d5769
+
+------------MailGun------------
+ mailgunApiKey=3a77cbb7fe0d44772e749a5217a6d19e-ba042922-7a57af9b
+ mailgunDomain=sandbox81755d8aa1034deb89acbfd2d256012f.mailgun.org
+  
