--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.12",
     "mongoose-autopopulate": "^0.12.3",
     "mongoose-findorcreate": "^3.0.0",
