--- a/clients/package.json
+++ b/clients/package.json
@@ -5,22 +5,26 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@material-ui/data-grid": "^4.0.0-alpha.9",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
     "material-design-icons": "^3.0.1",
     "material-ui-popup-state": "^1.7.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
+    "react-material-ui-carousel": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.10.0",
