--- a/clients/package.json
+++ b/clients/package.json
@@ -17,7 +17,9 @@
     "firebase": "^8.0.1",
     "material-design-icons": "^3.0.1",
     "material-ui-popup-state": "^1.7.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.28.6",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.2",
