--- a/clients/package.json
+++ b/clients/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "@u-wave/react-vimeo": "^0.9.1",
+    "animejs": "^3.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^8.0.1",
